--- a/roles/mongodebian/tasks/main.yml
+++ b/roles/mongodebian/tasks/main.yml
@@ -10,3 +10,4 @@
     filename: mongodb-org-3.4
  - name: Update repositories cache and install "mongodb" package
    apt: pkg=mongodb-org state=present update_cache=true
+   notify: start mysql
