--- a/roles/mongodebian/tasks/main.yml
+++ b/roles/mongodebian/tasks/main.yml
@@ -10,4 +10,7 @@
     filename: mongodb-org-3.4
  - name: Update repositories cache and install "mongodb" package
    apt: pkg=mongodb-org state=present update_cache=true
-   notify: start mysql
+ - name: Start service mongodb, if not started
+   service:
+     name: mongod
+     state: started
