--- a/roles/rediuscentos/tasks/main.yml
+++ b/roles/rediuscentos/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for rediuscentos
  - name: copy the rpm file /tmp
-   copy: src= files/epel-release-6-8.noarch.rpm dest=/tmp/epel-release-6-8.noarch.rpm
+   copy: src=files/epel-release-6-8.noarch.rpm dest=/tmp/epel-release-6-8.noarch.rpm
  -name: install downloaded files
   yum: name=/tmp/epel-release-6-8.noarch.rpm state=installed
  - name: install redis keyserver
