--- a/roles/rediusdebian/tasks/main.yml
+++ b/roles/rediusdebian/tasks/main.yml
@@ -1,8 +1,12 @@
 ---
 # tasks file for rediusdebian
- - name: Update repositories cache and install "mongodb" package
+ - name: Update repositories cache and install "redis server" package
    apt: name=redis-server state=present update_cache=true
+ - name: Ansible Template Example
+   template:
+    src: redis.j2
+    dest: /etc/redis/redis.conf
  - name: Start service redis, if not started
    service:
      name: redis-server
-     state: started
+     state: restarted
