--- a/roles/rediuscentos/tasks/main.yml
+++ b/roles/rediuscentos/tasks/main.yml
@@ -6,5 +6,9 @@
    yum: name=/tmp/epel-release-6-8.noarch.rpm state=installed
  - name: install redis keyserver
    yum: name=redis state=installed enabled=yes
+ - name: Ansible Template Example
+   template:
+    src: redis.j2
+    dest: /etc/redis/redis.conf
    notify:
      - start redis
