--- a/roles/rediuscentos/tasks/main.yml
+++ b/roles/rediuscentos/tasks/main.yml
@@ -10,5 +10,5 @@
    template:
     src: redis.j2
     dest: /etc/redis.conf
-#   notify:
-#     - start redis
+ - name: restart redis service
+   service: name=redis state=restarted
