--- a/roles/rediuscentos/handlers/main.yml
+++ b/roles/rediuscentos/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 # handlers file for rediuscentos
- - name: start redis
-   service: name=redis state=started
+ - name: start
+   service: name=redis state=restarted
