--- a/roles/dockerubuntu/tasks/main.yml
+++ b/roles/dockerubuntu/tasks/main.yml
@@ -6,9 +6,9 @@
     state: present
 - name: add repositories
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
     state: present
-    filename: docker.list
+    filename: docker
 - name: install dockerubuntu
   apt: name=docker-ce state=present update_cache=true
 - name: service start
