--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for mariadb103ubuntu
 -name: install dependency package
- aptt: name=software-properties-common state=installed update_cache=true
+ apt: name=software-properties-common state=installed update_cache=true
 - name: add the GPG key
   apt_key:
     keyserver: keyserver.ubuntu.com
