--- a/roles/mariadb103ubuntu/vars/main.yml
+++ b/roles/mariadb103ubuntu/vars/main.yml
@@ -4,4 +4,5 @@ distro: "{{ ansible_distribution_release }}"
 mariadb_packages:
   - mariadb-server
   - mariadb-server
+  - python-mysqldb
 mariadb_root_password: Test@123
