--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -4,8 +4,8 @@
   apt: name=software-properties-common state=present update_cache=true
 - name: add the GPG key
   apt_key:
-    url: http://ftp.kaist.ac.kr/mariadb//mariadb-10.3.8/repo/ubuntu/dists/xenial/Release.gpg
-    state: present
+    keyserver: keyserver.ubuntu.com
+    id: 0xF1656F24C74CD1D8
 - name: add repositories
   apt_repository:
     repo: deb [arch=amd64,arm64,i386,ppc64el] http://ftp.kaist.ac.kr/mariadb/repo/10.3/ubuntu xenial main
