--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -20,19 +20,19 @@
   with_items: "{{mariadb_packages}}"
   notify:
     - start
-- name: Check if root password is set
-  shell: >
-    mysqladmin -u root status
-  changed_when: false
-  failed_when: false
-  register: root_pwd_check
+#- name: Check if root password is set
+#  shell: >
+#    mysqladmin -u root status
+#  changed_when: false
+#  failed_when: false
+#  register: root_pwd_check
 - name: Set MariaDB root password for the first time (root@localhost)
   mysql_user:
     name: root
     password: "{{ mariadb_root_password }}"
     host: localhost
     state: present
-  when: root_pwd_check.rc == 0
+#  when: root_pwd_check.rc == 0
 - name: Set MariaDB root password for 127.0.0.1, ::1
   mysql_user:
     name: root
