--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -1,11 +1,17 @@
 ---
 # tasks file for mariadb103ubuntu
+- name: check mysql already installed or not
+  command: mysql --version
+  register: mysql_exist
+- name: remove existing mysql
+  package:
+    name: "{{ item }}"
+    state: absent
+  with_items: "{{remove_package}}"
+  when: mysql_exist.rc == 0
 - name: install dependency package
   apt: name=software-properties-common state=present update_cache=true
 - name: add the GPG key
-  #apt_key:
-  #  keyserver: keyserver.ubuntu.com
-  #  id: 0xF1656F24C74CD1D8
   command: apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0xF1656F24C74CD1D8
 - name: add repositories
   apt_repository:
@@ -15,23 +21,31 @@
 - name: install mariadb 10.3 in ubuntu
   package:
     name: "{{ item }}"
-    state: installed
+    state: present
     update_cache: true
   with_items: "{{mariadb_packages}}"
-  notify:
-    - start
+#  notify:
+#    - start
 #- name: Check if root password is set
 #  shell: >
 #    mysqladmin -u root status
 #  changed_when: false
 #  failed_when: false
 #  register: root_pwd_check
-- name: Set MariaDB root password for the first time (root@localhost)
-  mysql_user:
-    name: root
-    password: "{{ mariadb_root_password }}"
-    host: localhost
-    state: present
+- name: copy .my.cnf file which contains root user passowrd
+  template:
+    src: .my.cnf.j2
+    dest: /root/.my.cnf
+    owner: root
+    mode: 0600
+  notify:
+    - start
+#- name: Set MariaDB root password for the first time (root@localhost)
+#  mysql_user:
+#    name: root
+#    password: "{{ mariadb_root_password }}"
+#    host: localhost
+#    state: present
 #  when: root_pwd_check.rc == 0
 - name: Set MariaDB root password for 127.0.0.1, ::1
   mysql_user:
