--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -30,6 +30,19 @@
   with_items: "{{mariadb_packages}}"
   notify:
     - start
+- name: Add .my.cnf
+  template: src=my.cnf.j2 dest=/root/.my.cnf owner=root group=root mode=0600
+
+# Set root password
+# UPDATE mysql.user SET Password=PASSWORD('mysecret') WHERE User='root';
+# FLUSH PRIVILEGES;
+
+- name: Set root Password
+  mysql_user: login_password={{ mariadb_root_password }} check_implicit_admin=yes name=root host={{ item }} password={{ mariadb_root_password }} state=present
+  with_items:
+    - localhost
+    - 127.0.0.1
+    - ::1
 #  notify:
 #    - start
 #- name: Check if root password is set
@@ -53,15 +66,16 @@
 #    host: localhost
 #    state: present
 #  when: root_pwd_check.rc == 0
-- name: Set MariaDB root password for 127.0.0.1, ::1
-  mysql_user:
-    name: root
-    password: "{{ mariadb_root_password }}"
-    host: "{{ item }}"
-    login_user: root
-    login_password: "{{ mariadb_root_password }}"
-    state: present
-  with_items:
-    - ::1
-    - 127.0.0.1
+#- name: Set MariaDB root password for 127.0.0.1, ::1
+#  mysql_user:
+#    name: root
+#    password: "{{ mariadb_root_password }}"
+#    host: "{{ item }}"
+#    login_user: root
+#
+#    login_password: "{{ mariadb_root_password }}"
+#    state: present
+#  with_items:
+#    - ::1
+#    - 127.0.0.1
 #  when: root_pwd_check.rc == 0
