--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -34,16 +34,18 @@
 - name: Add .my.cnf
   template: src=.my.cnf.j2 dest=/root/.my.cnf owner=root group=root mode=0600
 
-# Set root password
-# UPDATE mysql.user SET Password=PASSWORD('mysecret') WHERE User='root';
-# FLUSH PRIVILEGES;
-
-- name: Set root Password
-  mysql_user: login_password={{ mariadb_root_password }} check_implicit_admin=yes name=root host={{ item }} password={{ mariadb_root_password }} state=present
+- name: update mysql root password for all root accounts
+  mysql_user:
+    name: root
+    host: "{{ item }}"
+    password: "{{ mysql_root_password }}"
+    priv: "*.*:ALL,GRANT"
   with_items:
-    - localhost
+    - "{{ ansible_hostname }}"
     - 127.0.0.1
     - ::1
+    - localhost
+
 #  notify:
 #    - start
 #- name: Check if root password is set
