--- a/roles/mariadb103ubuntu/vars/main.yml
+++ b/roles/mariadb103ubuntu/vars/main.yml
@@ -3,7 +3,7 @@
 distro: "{{ ansible_distribution_release }}"
 mariadb_packages:
   - mariadb-server
-  - mariadb-server
+  - mariadb-client
   - python-mysqldb
 mariadb_root_password: Test@123
 remove_package:
