--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -38,7 +38,7 @@
   mysql_user:
     name: root
     host: "{{ item }}"
-    password: "{{ mysql_root_password }}"
+    password: "{{ mariadb_root_password }}"
     priv: "*.*:ALL,GRANT"
   with_items:
     - "{{ ansible_hostname }}"
