--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -33,6 +33,8 @@
     - start
 - name: Add .my.cnf
   template: src=.my.cnf.j2 dest=/root/.my.cnf owner=root group=root mode=0600
+  notify:
+    - start
 
 - name: update mysql root password for all root accounts
   mysql_user:
