--- a/roles/dockerubuntu/vars/main.yml
+++ b/roles/dockerubuntu/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for dockerubuntu
-dockerusername: skylarkkpisoft
-dockerpassword: Password@123
+dockerusername: prabhinmp
+dockerpassword: Test@123
