--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -39,25 +39,23 @@
 #  template: src=.my.cnf.j2 dest=/root/.my.cnf owner=root group=root mode=0600
 #  notify:
 #    - start
-- name: serice restart
-  service:
-    name: mysql
-    state: restarted
+ - name: Update MySQL root password for all root accounts
+   mysql_user: name=root host={{ item }} password={{ mariadb_root_password }} state=present
+   with_items:
+     - "{{ ansible_hostname }}"
+     - 127.0.0.1
+     - ::1
+     - localhost
 
-- name: update mysql root password for all root accounts
-  mysql_user:
-      name: root
-      host: "{{ item }}"
-      password: "{{ mariadb_root_password }}"
-      login_user: root
-      login_password: "{{ mariadb_root_password }}"
-      check_implicit_admin: yes
-      priv: "*.*:ALL,GRANT"
-  with_items:
-      - "{{ ansible_hostname }}"
-      - 127.0.0.1
-      - ::1
-      - localhost
+ - name: Copy the root credentials as .my.cnf file
+   template: src=.my.cnf.j2 dest=~/.my.cnf mode=0600
+
+ - name: Ensure Anonymous user(s) are not in the database
+   mysql_user: name='' host={{ item }} state=absent
+   with_items:
+     - localhost
+     - "{{ ansible_hostname }}"
+
 
 #  notify:
 #    - start
