--- a/roles/mariadb103ubuntu/vars/main.yml
+++ b/roles/mariadb103ubuntu/vars/main.yml
@@ -5,6 +5,7 @@ mariadb_packages:
   - mariadb-server
   - mariadb-client
   - python-mysqldb
+  - libmysqlclient-dev
 mariadb_root_password: Test@123
 remove_package:
   - mysql
