--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -45,39 +45,10 @@
       - localhost
       - 127.0.0.1
 
-#  notify:
-#    - start
-#- name: Check if root password is set
-#  shell: >
-#    mysqladmin -u root status
-#  changed_when: false
-#  failed_when: false
-#  register: root_pwd_check
-#- name: copy .my.cnf file which contains root user passowrd
-#  template:
-#    src: .my.cnf.j2
-#    dest: /root/.my.cnf
-#    owner: root
-#    mode: 0600
-#  notify:
-#    - start
-#- name: Set MariaDB root password for the first time (root@localhost)
-#  mysql_user:
-#    name: root
-#    password: "{{ mariadb_root_password }}"
-#    host: localhost
-#    state: present
-#  when: root_pwd_check.rc == 0
-#- name: Set MariaDB root password for 127.0.0.1, ::1
-#  mysql_user:
-#    name: root
-#    password: "{{ mariadb_root_password }}"
-#    host: "{{ item }}"
-#    login_user: root
-#
-#    login_password: "{{ mariadb_root_password }}"
-#    state: present
-#  with_items:
-#    - ::1
-#    - 127.0.0.1
-#  when: root_pwd_check.rc == 0
+- name: replace bind address
+  lineinfile:
+    dest: /etc/mysql/my.cnf
+    regexp: '^(.*)bind-address(.*)$'
+    line: bind-address            = {{ ansible_default_ipv4.address }}
+  notify:
+    - start
