--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -62,12 +62,12 @@
 #      - 127.0.0.1
 #      - '%'
 
-- name: replace bind address
-  lineinfile:
-    dest: /etc/mysql/my.cnf
-    regexp: '^(.*)bind-address(.*)$'
-    line: bind-address            = {{ ansible_default_ipv4.address }}
-    backrefs: yes
-  become: true
-  notify:
-    - start
+#- name: replace bind address
+#  lineinfile:
+#    dest: /etc/mysql/my.cnf
+#    regexp: '^(.*)bind-address(.*)$'
+#    line: bind-address            = {{ ansible_default_ipv4.address }}
+#    backrefs: yes
+#  become: true
+#  notify:
+#    - start
