--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -41,8 +41,13 @@
     - localhost
     - '%'
     - 127.0.0.1
-- name: remove mysql root blank password
-  mysql_user: name=debian-sys-maint host=localhost state=absent
+- name: remove
+  mysql_user: name="root"
+              password="{{ mariadb_root_password }}"
+              check_implicit_admin=yes
+              login_user="root"
+              login_password=""
+              state=present
 #  notify:
 #    - start
 #- name: Update MySQL root password for all root accounts
