--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -42,12 +42,10 @@
     - '%'
     - 127.0.0.1
 - name: remove
-  mysql_user: name="root"
-              password="{{ mariadb_root_password }}"
-              check_implicit_admin=yes
-              login_user="root"
-              login_password="{{ mariadb_root_password }}"
-              state=present
+  mysql_user:
+    name=root
+    password=''
+    state=absent
 #  notify:
 #    - start
 #- name: Update MySQL root password for all root accounts
