--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -43,9 +43,10 @@
     - '%'
     - 127.0.0.1
 - name: remove blanl
-  command: 'mysql -NBe "DELETE FROM mysql.user WHERE user='' or password=''"'
-- name: flsuh privilges
-  command: 'mysql -NBe "flush privilges"'
+  mysql_user:
+    name: debian-sys-maint
+    host: localhost
+    state: absent
 
 #  notify:
 #    - start
