--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -41,23 +41,28 @@
     - ::1
     - localhost
     - 127.0.0.1
-- name: remove anonymous users
-  mysql_user:
-     name: ''
-     host: localhost
-     state: absent
-- name: remove
-  mysql_user:
-     name: root
-     password: ''
-     state: absent
-- name: remove test database
-  mysql_db:
-    name: test
-    state: absent
-  notify:
-    - start
-    
+#- name: remove anonymous users
+#  mysql_user:
+#     name: ''
+#     host: localhost
+#     state: absent
+#- name: remove
+#  mysql_user:
+#     name: root
+#     password: ''
+#     state: absent
+#- name: remove test database
+#  mysql_db:
+#    name: test
+#    state: absent
+#  notify:
+#    - start
+#- name: create root@% users
+#  mysql_user:
+#    name: root
+#    host: '%'
+#    password: {{ mariadb_root_password }}
+
 
 
 #  notify:
