--- a/roles/mariadb103ubuntu/tasks/main.yml
+++ b/roles/mariadb103ubuntu/tasks/main.yml
@@ -23,28 +23,27 @@
 #  command: debconf-set-selections <<< 'mariadb-server-10.3 mysql-server/root_password password {{ mariadb_root_password }}'
 #- name: Confirm MySQL root password before installing
 #  command: debconf-set-selections <<< 'mariadb-server-10.3 mysql-server/root_password_again password {{ mariadb_root_password }}'
-- name: install mariadb 10.3 in ubuntu
-  package:
-    name: "{{ item }}"
-    state: present
-    update_cache: true
-  with_items: "{{mariadb_packages}}"
-- name: mysql_secure_installation
-  template:
-    src: mysql.sh.j2
-    dest: /tmp/mysql.sh
-- name: execute mysql_secure_installation script
-  command: sh /tmp/mysql.sh
-- name: mysql root_user add from %
-  mysql_user:
-    login_user: root
-    login_password: "{{ mariadb_root_password }}"
-    user: root
-    password : "{{ mariadb_root_password }}"
-    host: '%'
-    state: present
-  notify:
-    - start
+- name: update mysql root password for all root accounts
+  mysql_user: name=root host=localhost password="{{ mariadb_root_password }}"
+
+- name: copy .my.cnf file with root password credentials
+  template: src=.my.cnf.j2 dest=/root/.my.cnf owner=root mode=0600
+
+- name: update mysql root password for all root accounts
+  mysql_user: name=root host={{ item }} password="{{ mariadb_root_password }}"
+  with_items:
+    - 127.0.0.1
+    - ::1
+
+- name: ensure anonymous users are not in the database
+  mysql_user: name='' host={{ item }} state=absent
+  with_items:
+    - localhost
+    - "{{ inventory_hostname }}"
+
+- name: remove the test database
+  mysql_db: name=test state=absent
+
 - name: replace bind address
   lineinfile:
     dest: /etc/mysql/my.cnf
@@ -54,6 +53,7 @@
   become: true
   notify:
     - start
+
 
 #  notify:
 #    - start
