--- a/roles/awsmon/tasks/main.yml
+++ b/roles/awsmon/tasks/main.yml
@@ -13,17 +13,13 @@
      name: "{{ items }}"
      state: present
   with_items:
-     - perl-Switch
-     - perl-DateTime
-     - perl-Sys-Syslog
-     - perl-LWP-Protocol-https
-     - perl-Digest-SHA
+     - libwww-perl
+     - libdatetime-perl
 - name: copy aws access and sceret key
   template:
     src: awscreds.conf.j2
     dest: /opt/awsmon/awscreds.conf
     state: present
-
 - name: add cronjob 
   file:
     src: files/cloudwatch
