--- a/roles/awsmon/tasks/main.yml
+++ b/roles/awsmon/tasks/main.yml
@@ -8,6 +8,7 @@
   unarchive:
      src: /tmp/awsmon.zip
      dest: /opt/
+     remote_src: yes
 - name: install dependency packages
   package:
      name: "{{ items }}"
