--- a/roles/awsmon/tasks/main.yml
+++ b/roles/awsmon/tasks/main.yml
@@ -25,8 +25,9 @@
   copy:
     src: files/cloudwatch
     dest: /etc/cron.d/cloudwatch
-    mode: 0644
+    mode: 644
     owner: root
+    remote_src: yes
 - name: restart cron service
   service:
     name: cron
