--- a/roles/dockercentos/tasks/main.yml
+++ b/roles/dockercentos/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
 # tasks file for dockercentos
 - name: Install docker package in centos7
-  yum : name=docker update_cache=yes enabled=yes state=started
+  yum :
+    name: docker
+    upda_cache: yes
+    enabled: yes
+    state: present
+- name: import login
+  include_tasks: login.yml
