--- a/roles/dockercent7.yml
+++ b/roles/dockercent7.yml
@@ -1,7 +1,7 @@
 ---
  - hosts: new
    become: true
-   become_user: ec2-user
+   become_user: root
    become_method: sudo
    roles:
       - dockercentos
