--- a/roles/dockerubuntu.yml
+++ b/roles/dockerubuntu.yml
@@ -1,5 +1,8 @@
 ---
  - hosts: local
+   become: true
+   become_user: root
+   become_method: sudo
    gather_facts: true
    roles:
     - dockerubuntu
