--- a/roles/mongoubuntu.yml
+++ b/roles/mongoubuntu.yml
@@ -1,5 +1,8 @@
 ---
  - hosts: local
    gather_facts: true
+   become: true
+   become_user: root
+   become_method: sudo
    roles:
     - mongodebian
