--- a/roles/logstash/tasks/ubuntu.yml
+++ b/roles/logstash/tasks/ubuntu.yml
@@ -1,3 +1,18 @@
 ---
- - name: download logstash 6.3.2 deb from the offical website
-   
+ - name: download the logstash 6.3.2 rpm from the official website
+   yum:
+     name: {{ urldebian }}
+     state: present
+# - name: change the bind 
+#   replace:
+#     path: 
+#     regexp:
+#     replace:
+#   notify:
+#   - start
+ - name: copy logstash.conf file to conf folder
+   template:
+     src: logstash.conf.j2
+     dest: /etc/logstash/conf.d/logstash.conf
+   notify:
+   - start
