--- a/roles/logstash/tasks/ubuntu.yml
+++ b/roles/logstash/tasks/ubuntu.yml
@@ -1,7 +1,7 @@
 ---
  - name: download the logstash 6.3.2 rpm from the official website
    apt:
-     deb: {{ urldebian }}
+     deb: https://artifacts.elastic.co/downloads/logstash/logstash-6.3.2.deb
      state: present
 # - name: change the bind 
 #   replace:
