--- a/roles/kibana/tasks/main.yml
+++ b/roles/kibana/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
 # tasks file for kibana
+ - include_tasks: centos.yml
+   when: ansible_os_family == 'RedHat'
+ - include_tasks: ubuntu.yml
+   when: ansible_os_family == 'Debian'
