--- a/roles/logstash/tasks/ubuntu.yml
+++ b/roles/logstash/tasks/ubuntu.yml
@@ -3,6 +3,16 @@
    apt:
      deb: https://artifacts.elastic.co/downloads/logstash/logstash-6.3.2.deb
      state: present
+ - name: change java min options
+   replace:
+     path: /etc/logstash/jvm.options
+     regexp: 'Xms1g'
+     replace: 'Xms3g'
+ - name: change java max options
+   replace:
+     path: /etc/logstash/jvm.options
+     regexp: 'Xmx1g'
+     replace: 'Xmx3g'
 # - name: change the bind 
 #   replace:
 #     path: 
