--- a/roles/presto/vars/main.yml
+++ b/roles/presto/vars/main.yml
@@ -1,2 +1,3 @@
 ---
 # vars file for presto
+site: https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.215/presto-server-0.215.tar.gz
