--- a/roles/awsmon/tasks/main.yml
+++ b/roles/awsmon/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 # tasks file for awsmon
+- name: install unzip
+  package:
+     name: unzip
+     state: present
 - name: copy the awsmon python script to server
   copy:
     src: files/awsmon.zip
@@ -25,6 +29,7 @@
   copy:
     src: files/cloudwatch.txt
     dest: /etc/cron.d/cloudwatch
+    mode: 644
 - name: restart cron service
   service:
     name: cron
